--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,5 +16,37 @@ body {
   font: inherit;
   padding: 8px;
   max-width: 320px;
-  margin-bottom: 16px;
+  
+}
+.country-list{
+  padding: 0;
+}
+.item-container{
+  display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.country-name{
+font-family: Georgia, serif;
+  font-size: 21px;
+  letter-spacing: -1.2px;
+  word-spacing: 0.4px;
+  color: #000000;
+  font-weight: 700;
+  text-decoration: underline solid rgb(68, 68, 68);
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+}
+.country-info{
+  font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    letter-spacing: -0.6px;
+    word-spacing: 1.2px;
+    color: #000000;
+    font-weight: normal;
+    text-decoration: none solid rgb(68, 68, 68);
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
 }
